# Telegram-Audio-Downloader

./: .bandit  .coderabbit.yaml  .coveragerc  .coveragerc.new  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .gitleaks.toml.new  .markdownlint.yml  .pre-commit-config.yaml  .safety-policy.yml  .safety-project.ini  .yamllint.yml  =4.66.3  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FILENAME_SANITIZATION_FIX.md  GITHUB_FEATURES_SUMMARY.md  Github Prompt.txt  Github_Prompt_v2.txt  LICENSE  MAINTENANCE_SUMMARY.md  Makefile  NEXT_CHAT_OVERVIEW.md  README.md  README_OLD.md  RELEASE_NOTES_v1.0.0.md  REPOSITORY_TRANSFORMATION_COMPLETE.md  ROADMAP.md  SECURITY.md  SECURITY_FIXES_SUMMARY.md  SECURITY_UPDATES_PR.md  SECURITY_UPDATE_REPORT.md  SUPPORT.md  TODO.md  (+42 more)
.codellm/rules/: github_master_prompt.mdc
.devcontainer/: devcontainer.json  setup.sh  start.sh  update.sh
.github/: CODEOWNERS  FUNDING.yml  PROJECT_BOARD.md  SECURITY.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  release.yml  settings.yml  topics.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md  question.yml
.github/codeql/: codeql-config.yml
.github/discussions/: README.md  config.yml  faq-post.md  welcome-post.md
.github/issues/: github_pages_setup.md  repository_enhancement.md
.github/scripts/: setup_repository.sh
.github/workflows/: ISSUE_SUMMARY.md  README.md  ci.yml  code-quality.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  e2e-tests.yml  greetings.yml  issue-summary.yml  manual.yml  monitoring.yml  pr_review.yml  release.yml  repo-sovereign-prime.yml  safety_scan.yml  security-sarif.yml  stale.yml  summary.yml  test.yml
.github/workflows_backup/: monitoring.yml  pr_review.yml  safety_scan.yml
.governance/: README.md  config.yml
.qoder/quests/: telegram-audio-downloader-enhancement.md  yaml-syntax-fix.md
.qoder/rules/: Telegram-Musik-Tool.md  audio-conversion-feature.md  fix-special-characters.md  telegram-audio-downloader-quest.md
.windsurf/rules/: github-prompt-v6.md
config/: default.ini  example_config.ini  example_config.json  example_config.yaml  proxy_example.yaml
docker/: README.md  docker-compose.monitoring.yml
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  CLI_REFERENCE_WIKI.md  DEPLOYMENT.md  INSTALLATION.md  INSTALLATION_WIKI.md  PERFORMANCE.md  PRODUCTION.md  README_MEMORY.md  REPOSITORY_MAINTENANCE.md  REPOSITORY_MAINTENANCE_GUIDE.md  RESOURCE_MAPPING.md  SCALING.md  SOP_REPOSITORY_MAINTENANCE.md  TEST_ISSUES.md  TEST_STRATEGY.md  TROUBLESHOOTING.md  TUTORIALS.md  WINDSURF_RECOMMENDATIONS_SUMMARY.md  configuration.md  index.md
docs/sphinx/: conf.py  index.md
prompt_modules/: 00_master_index.md  01_kern_systemprompt.md  02_tool_mastery.md  03_strategic_framework.md  04_community_doc_excellence.md  05_enterprise_standards.md  06_adaptive_engine.md  07_quality_assurance.md  USAGE_GUIDE.md
prompt_modules_backup/: 00_master_index.md  01_kern_systemprompt.md  02_mcp_server_tools.md  03_cicd_best_practices.md  04_wiki_setup_mastery.md  05_repository_excellence.md  06_lessons_learned.md  KOMBINATIONS_MATRIX.md  USAGE_GUIDE.md
scripts/: dev_tools.py  maintain_repository.py  repo_sovereign_prime.py  security_automation.py  setup_dev_environment.py  setup_wiki.sh  update_changelog.py  version_manager.py
scripts/monitoring/: Makefile  continuous_monitor.py  dashboard.py
src/telegram_audio_downloader/: __init__.py  __main__.py  accessibility.py  adaptive_parallelism.py  advanced_filename_generation.py  advanced_logging.py  advanced_memory_management.py  advanced_metadata_extraction.py  advanced_notifications.py  advanced_resume.py  advanced_search.py  audit_logging.py  auto_categorization.py  auto_completion.py  automatic_error_recovery.py  batch_processing.py  cli.py  color_coding.py  config.py  contextual_help.py  custom_keybindings.py  customizable_interface.py  database.py  database_api.py  database_backup.py  database_caching.py  database_documentation.py  database_indexing.py  database_migrations.py  database_monitoring.py  database_pooling.py  database_replication.py  database_scaling.py  database_security.py  database_tests.py  database_validation.py  db_error_handler.py  downloader.py  downloader_complete.py  enhanced_error_handling.py  (+33 more)
src/telegram_audio_downloader/core/: __init__.py  downloader.py
src/telegram_audio_downloader/utils/: __init__.py  file_operations.py  lru_cache.py
tests/: __init__.py  conftest.py  test_accessibility.py  test_advanced_filename_generation.py  test_advanced_logging.py  test_advanced_metadata_extraction.py  test_advanced_notifications.py  test_advanced_resume.py  test_advanced_search.py  test_audit_logging.py  test_auto_categorization.py  test_auto_completion.py  test_basic_download.py  test_batch_processing.py  test_ci_cd.py  test_cli_comprehensive.py  test_cli_error_handling.py  test_cli_system_integration.py  test_cli_validation.py  test_cli_validation_comprehensive.py  test_color_coding.py  test_comprehensive.py  test_config_comprehensive.py  test_config_documentation.py  test_config_dynamic.py  test_config_edge_cases.py  test_config_security.py  test_config_validation.py  test_configuration.py  test_contextual_help.py  test_customizable_interface.py  test_data_setup.py  test_database_comprehensive.py  test_documentation.py  test_documentation_comprehensive.py  test_e2e.py  test_enhanced_error_handling.py  test_enhanced_security.py  test_enhanced_user_interaction.py  test_error_injection.py  (+38 more)
tools/: check_security.py  comprehensive_security_check.py  performance_monitoring.py  security_scan.py  validation_run_17171352080_fix.py
wiki/: Advanced-Resume.md  Architecture-Overview.md  Best-Practices.md  CLI-Commands.md  FAQ.md  Home.md  Installation-Guide.md  Performance-Tuning.md  Quick-Start.md  Troubleshooting.md
workspaces/Telegram-Audio-Downloader/tests/: test_cli.py  test_database.py  test_downloader.py  test_integration.py  test_logging.py
